Refactor and implement button for changing grid size

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div class = "title">Etch-a-Sketch</div>
 
     <div class = "grid-container"></div>
+
+    <button id = "change-size">Change Grid Size</button>
   
 
   <script src= "sketch.js"></script>
