Implement clear button with transition

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <div class = "grid-container"></div>
 
-    <button id = "change-size">Change Grid Size</button>
+    <div class = button-container>
+        <button id = "change-size">Change Grid Size</button>
+        <button id = "clear">Clear</button>
+    </div>
   
 
   <script src= "sketch.js"></script>
