--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <body>
     <div class = "title">Etch-a-Sketch</div>
 
-    <div class = "grid-container"></div>
-
-    <div class = button-container>
-        <button id = "change-size">Change Grid Size</button>
-        <button id = "clear">Clear</button>
+    <div class = container>
+        <div class = button-container>
+            <button id = "change-size">Change Grid Size</button>
+            <button id = "clear">Clear</button>
+        </div>
+        <div class = "grid-container"></div>
     </div>
+
+    
   
 
   <script src= "sketch.js"></script>
