Implement toggle for modes and eraser mode

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
     <div class = container>
         <div class = button-container>
-            <button id = "change-size">Change Grid Size</button>
+            <button class = "mode" id ="dark-mode">Dark Mode</button>
+            <button class = "mode" id ="shade-mode">Shade Mode</button>
+            <button class = "mode" id ="rainbow-mode">Rainbow Mode</button>
+            <button class = "mode" id ="eraser-mode">Eraser</button>
             <button id = "clear">Clear</button>
+            <button id = "change-size">Change Grid Size</button>
         </div>
         <div class = "grid-container"></div>
     </div>
