--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <button class = "mode" id ="eraser-mode">Eraser</button>
             <button id = "clear">Clear</button>
             <button id = "change-size">Change Grid Size</button>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="64" value="16" class="slider" id="myRange" onchange="updateGrid(value)">
+              </div>
         </div>
         <div class = "grid-container"></div>
     </div>
